fixes alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -134,9 +134,9 @@ li > a {
   padding: 0 50px;
 }
 
-.feature-speciality-right{
-    display: flex;
-    flex-direction: column;
+.feature-speciality-right {
+  display: flex;
+  flex-direction: column;
 }
 
 .feature-speciality {
@@ -185,9 +185,6 @@ li > a {
   font-size: 25px;
 }
 
-
-
-
 @media only screen and (max-width: 576px) {
   header,
   .banner {
@@ -221,34 +218,44 @@ li > a {
   .feature-title {
     padding-top: 25px;
   }
+  .feature-right{
+      text-align: center;
+  }
   .features-left {
     grid-template-columns: repeat(1, 1fr);
     gap: 24px;
     margin: 0;
   }
-  .feature-speciality{
-      width: auto;
-      flex-direction: column;
+  .feature-speciality {
+    width: auto;
+    flex-direction: column;
   }
-  .feature-special-title{
-      font-size: 30px;
-      padding: 15px;
+  .feature-special-title {
+    font-size: 30px;
+    padding: 15px;
   }
-  .feature-speciality-right{
-      align-items: center;
+  .feature-speciality-left{
+      padding: 30px 50px;
   }
-  .feature-speciality-right img{
-      width: 100%;
+  .feature-speciality-left-bottom {
+    padding: 0;
   }
-  .feature-speciality-left-bottom{
+  .speciality{
       padding: 0;
   }
-  .experience-btn{
-      margin: 10px 0;
-      font-size: 25px;
+  .feature-speciality-right {
+    align-items: center;
   }
-  
-  .hidden{
-      display: none;
+  .feature-speciality-right img {
+    width: 100%;
+  }
+  .experience-btn {
+    margin: 10px 0;
+    font-size: 25px;
+    padding: 20px;
+  }
+
+  .hidden {
+    /* display: none; */
   }
 }
